2006-12-07  Rob Bradford  <rob@robster.org.uk>

	* configure.ac: Added support for Python 2.5. (see #375382)

2006-12-07  Kevin Tighe  <kevin.j.tighe@gmail.com>

	* alacarte.glade: Added minimize/maximize buttons to main window. 
	  (GNOME bug #370598).

2006-12-07  Rob Bradford  <rob@robster.org.uk>

	* Alacarte/MainWindow.py: Disable the up/down arrows when on the
	  first/last items (see #352103)

2006-12-07  Rob Bradford  <rob@robster.org.uk>

	* alacarte.desktop.in: removed
	* alacarte.desktop.in.in: added and include bug-buddy magic 
	  (see #363186)
	* configure.ac: added alacarte.desktop.in to AC_CONFIG_FILES

2006-10-02  Travis Watkins  <alleykat@gmail.com>

	* configure.ac: post-release bump to 0.10.2

2006-10-02  Frederic Crozat  <fcrozat@mandriva.com>

	* Alacarte/util.py: fix typo in code.
	* Alacarte/MenuEditor.py: disable inlining in newly created menu
	(GNOME bug #359003).
	* Alacarte/MenuEditor.py: don't hardcode root menu node name 
	(GNOME bug #355828).

2006-10-02  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/DialogHandler.py: escape non-alphanum chars in command dialog

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/DialogHandler.py: escape \t, \r, and \n

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/DialogHandler.py: don't set menu values to values of last
	menu looked at (oops)

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/MainWindow.py: ignore expanding errors

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/util.py: move .config out of the way if it's not a directory

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/DialogHandler.py: fix crash bug with command entry

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/util.py: fix invalid system menu path (thanks fcrozat)

2006-10-01  Travis Watkins  <alleykat@gmail.com>

	* Alacarte/util.py: fix XDG_DATA_HOME paths

2006-10-01  Travis Watkins  <alleykat@gmail.com>
