@@ -1,7 +1,8 @@
 [Desktop Entry]
 Encoding=UTF-8
-_Name=Menu Layout
-_Comment=Add, change, remove menu entries
+_Name=Main Menu Editor
+_Comment=Change which applications are shown on the main menu
+_GenericName=Menu Editor
 Exec=alacarte
 Terminal=false
 Type=Application
