@@ -1,5 +1,11 @@
 2006-12-07  Rob Bradford  <rob@robster.org.uk>
 
+	* alacarte.desktop.in.in: added _GenericName (see #352105) and changed
+	  the _Name and _Comment to match the recommendations from the Sun
+	  usability guys (see #375629).
+
+2006-12-07  Rob Bradford  <rob@robster.org.uk>
+
 	* configure.ac: Added support for Python 2.5. (see #375382)
 
 2006-12-07  Kevin Tighe  <kevin.j.tighe@gmail.com>
